fml/src/tui/widgets/snapshots/fml__tui__widgets__source_selector__tests__renders_all_enabled_popup.snap
---
source: fml/src/tui/widgets/source_selector.rs
assertion_line: 453
expression: "render(state(sources, &[\"src-a\", \"src-b\", \"src-c\"]), 80, 24)"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
        ┌ Sources ─────────────────────────────────────────────────────┐        
        │Filter visible logs by source                                 │        
        │                                                              │        
        │> [x] fake                                                 3/3│        
        │    [x] backend                                            2/2│        
        │      [x] Service A                                           │        
        │      [x] Service B                                           │        
        │    [x] frontend                                           1/1│        
        │      [x] Service C                                           │        
        │                                                              │        
        │space toggle  a all  n none  esc close                        │        
        └──────────────────────────────────────────────────────────────┘
