fml/src/tui/widgets/snapshots/fml__tui__widgets__source_selector__tests__renders_narrow_fallback.snap
---
source: fml/src/tui/widgets/source_selector.rs
assertion_line: 488
expression: "render(state(sources, &[\"src-b\", \"src-c\"]), 36, 14)"
---
                                    
                                    
 ┌ Sources ───────────────────────┐ 
 │> [-] fake                      │ 
 │    [-] backend                 │ 
 │      [ ] Service A             │ 
 │      [x] Service B             │ 
 │    [x] frontend                │ 
 │      [x] Service C             │ 
 │                                │ 
 │space toggle  esc close         │ 
 └────────────────────────────────┘
