fml/src/tui/widgets/snapshots/fml__tui__widgets__source_selector__tests__renders_partial_popup.snap
---
source: fml/src/tui/widgets/source_selector.rs
assertion_line: 464
expression: "render(state(sources, &[\"src-b\", \"src-c\"]), 80, 24)"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
        ┌ Sources ─────────────────────────────────────────────────────┐        
        │Filter visible logs by source                                 │        
        │                                                              │        
        │> [-] fake                                                 2/3│        
        │    [-] backend                                            1/2│        
        │      [ ] Service A                                           │        
        │      [x] Service B                                           │        
        │    [x] frontend                                           1/1│        
        │      [x] Service C                                           │        
        │                                                              │        
        │space toggle  a all  n none  esc close                        │        
        └──────────────────────────────────────────────────────────────┘
