fml/src/tui/widgets/snapshots/fml__tui__widgets__source_selector__tests__renders_scrolled_tall_tree.snap
---
source: fml/src/tui/widgets/source_selector.rs
expression: "render(state, 80, 12)"
---
                                                                                
        ┌ Sources ─────────────────────────────────────────────────────┐        
        │Filter visible logs by source                                 │        
        │                                                              │        
        │      [x] Service 04                                          │        
        │      [x] Service 05                                          │        
        │>     [ ] Service 06                                          │        
        │      [ ] Service 07                                          │        
        │                                                              │        
        │space toggle  a all  n none  esc close                        │        
        └──────────────────────────────────────────────────────────────┘
